job-task/k8-files/ingress.yml
apiVersion: networking.k8s.io/v1  
kind: Ingress  
metadata:  
  name: hello-kubernetes-ingress  
  annotations:  
    kubernetes.io/ingress.class: alb  
    alb.ingress.kubernetes.io/scheme: internet-facing  
spec:  
  rules:  
  - http:  
      paths:  
      - path: /  
        pathType: Prefix  
        backend:  
          service:  
            name: hello-kubernetes  
            port:  
              number: 80
